short update on Appendix A before sendint it out to coauthors review

--- a/notebooks/01_appendixA_additional_equations.Rmd
+++ b/notebooks/01_appendixA_additional_equations.Rmd
@@ -95,7 +95,7 @@ The only difference here regards how the cumulative influence function $\phi_{cu
 
 # Computation of the cumulative influence
 
-In theory, the calculation of the cumulative influence function $\phi_{cum}$ for a given study area $\Omega$ requires the computation of eq. 4 from the main text or eq. 6,which might be difficult and computationally challenging for large areas with many infrastructure features spread non-regularly in space. To overcome that limitation, we implemented this calculation by constructing filters (or weighing matrices; see Miguet et al., 2017) that follow an assumed decaying function (see the functions in Fig. 1 of the main text for examples) and used them on moving window/neighborhood analyses over the input infrastructure layers (see Appendix D for an illustration of how this approach is applied). This is similar to the approaches presented by Miguet et al. (2017) and Gilleland (2013). Even though we do not demonstrate it here, if the filter is set appropriately to include most of the area within which the influence function is positive (e.g. larger than 0.05 or 0.01), the result of applying eq. 4 of the main text or eq. 6 presents a correlation $> 0.99$ with the result of the neighborhood analysis.
+In theory, the calculation of the cumulative influence function $\phi_{cum}$ for a given study area $\Omega$ requires the computation of eq. 4 from the main text or eq. 6 for each infrastructure feature, which might be difficult and computationally challenging for large areas with many infrastructure features spread non-regularly in space. To overcome that limitation, we implemented this calculation by constructing filters (or weighing matrices; see Miguet et al., 2017) that follow an assumed decaying function (see the functions in Fig. 1 of the main text for examples) and used them on moving window/neighborhood analyses over the input infrastructure layers (see Appendix D for an illustration of how this approach is applied using the R package `oneimpact`). This is similar to the approaches presented by Miguet et al. (2017) and Gilleland (2013). Even though we do not demonstrate it here, if the filter is set appropriately to include most of the area within which the influence function is positive (e.g. larger than 0.05 or 0.01), the result of applying eq. 4 of the main text or eq. 6 presents a correlation $> 0.99$ with the result of the neighborhood analysis.
 
 <!-- **Should I demonstrate it here for examples such as the ones in Appendix B?** -->
 
