--- a/text/cuminf_bib.bib
+++ b/text/cuminf_bib.bib
@@ -62,6 +62,25 @@
 	file = {Zeller et al. - 2017 - Multi-level, multi-scale resource selection functi.pdf:C\:\\Users\\bernardo.brandao\\Zotero\\storage\\5R72TSWX\\Zeller et al. - 2017 - Multi-level, multi-scale resource selection functi.pdf:application/pdf},
 }
 
+@article{avgar_relative_2017,
+	title = {Relative {Selection} {Strength}: {Quantifying} effect size in habitat‐ and step‐selection inference},
+	volume = {7},
+	issn = {2045-7758, 2045-7758},
+	shorttitle = {Relative {Selection} {Strength}},
+	url = {https://onlinelibrary.wiley.com/doi/10.1002/ece3.3122},
+	doi = {10.1002/ece3.3122},
+	abstract = {Habitat-­selection analysis lacks an appropriate measure of the ecological significance of the statistical estimates—a practical interpretation of the magnitude of the selection coefficients. There is a need for a standard approach that allows relating the strength of selection to a change in habitat conditions across space, a quantification of the estimated effect size that can be compared both within and across studies. We offer a solution, based on the epidemiological risk ratio, which we term the relative selection strength (RSS). For a “used-­available” design with an exponential selection function, the RSS provides an appropriate interpretation of the magnitude of the estimated selection coefficients, conditional on all other covariates being fixed. This is similar to the interpretation of the regression coefficients in any multivariable regression analysis. Although technically correct, the conditional interpretation may be inappropriate when attempting to predict habitat use across a given landscape. Hence, we also provide a simple graphical tool that communicates both the conditional and average effect of the change in one covariate. The average-­effect plot answers the question: What is the average change in the space use probability as we change the covariate of interest, while averaging over possible values of other covariates? We illustrate an application of the average-­effect plot for the average effect of distance to road on space use for elk (Cervus elaphus) during the hunting season. We provide a list of potentially useful RSS expressions and discuss the utility of the RSS in the context of common ecological applications.},
+	language = {en},
+	number = {14},
+	urldate = {2021-10-18},
+	journal = {Ecology and Evolution},
+	author = {Avgar, Tal and Lele, Subhash R. and Keim, Jonah L. and Boyce, Mark S.},
+	month = jul,
+	year = {2017},
+	pages = {5322--5330},
+	file = {Avgar et al. - 2017 - Relative Selection Strength Quantifying effect si.pdf:C\:\\Users\\bernardo.brandao\\Zotero\\storage\\YVD6CDD9\\Avgar et al. - 2017 - Relative Selection Strength Quantifying effect si.pdf:application/pdf},
+}
+
 @article{johnson_resource_2006,
 	title = {Resource {Selection} {Functions} {Based} on {Use}–{Availability} {Data}: {Theoretical} {Motivation} and {Evaluation} {Methods}},
 	volume = {70},
@@ -125,10 +144,10 @@
 	shorttitle = {Model selection and multimodel inference},
 	language = {en},
 	publisher = {Springer},
-	author = {Burnham, Kenneth P. and Anderson, David Raymond and Burnham, Kenneth P.},
+	author = {Burnham, Kenneth P. and Anderson, David Raymond},
 	year = {2002},
 	note = {OCLC: ocm48557578},
-	keywords = {Biology, Mathematical models, Mathematical statistics},
+	keywords = {Mathematical models, Biology, Mathematical statistics},
 	file = {Burnham et al. - 2002 - Model selection and multimodel inference a practi.pdf:C\:\\Users\\bernardo.brandao\\Zotero\\storage\\RHKMRKJW\\Burnham et al. - 2002 - Model selection and multimodel inference a practi.pdf:application/pdf;Burnham et al. - 2002 - Model selection and multimodel inference a practi.pdf:C\:\\Users\\bernardo.brandao\\Zotero\\storage\\YKFU3WSZ\\Burnham et al. - 2002 - Model selection and multimodel inference a practi.pdf:application/pdf},
 }
 
@@ -146,7 +165,7 @@
 	month = may,
 	year = {2021},
 	pages = {1027--1043},
-	file = {Fieberg et al. - 2021 - A ‘How to’ guide for interpreting parameters in ha.pdf:C\:\\Users\\bernardo.brandao\\Zotero\\storage\\KLYJ6M4Z\\Fieberg et al. - 2021 - A ‘How to’ guide for interpreting parameters in ha.pdf:application/pdf;Fieberg2021_howto_habitat_selection_appC.html:C\:\\Users\\bernardo.brandao\\Zotero\\storage\\J3WXW3NQ\\Fieberg2021_howto_habitat_selection_appC.html:text/html;Fieberg2021_howto_habitat_selection_appA.html:C\:\\Users\\bernardo.brandao\\Zotero\\storage\\7NV9797E\\Fieberg2021_howto_habitat_selection_appA.html:text/html;Fieberg2021_howto_habitat_selection_appB.html:C\:\\Users\\bernardo.brandao\\Zotero\\storage\\QLPY2ZZJ\\Fieberg2021_howto_habitat_selection_appB.html:text/html},
+	file = {Fieberg et al. - 2021 - A ‘How to’ guide for interpreting parameters in ha.pdf:C\:\\Users\\bernardo.brandao\\Zotero\\storage\\KLYJ6M4Z\\Fieberg et al. - 2021 - A ‘How to’ guide for interpreting parameters in ha.pdf:application/pdf;Fieberg2021_howto_habitat_selection_appA.html:C\:\\Users\\bernardo.brandao\\Zotero\\storage\\7NV9797E\\Fieberg2021_howto_habitat_selection_appA.html:text/html;Fieberg2021_howto_habitat_selection_appB.html:C\:\\Users\\bernardo.brandao\\Zotero\\storage\\QLPY2ZZJ\\Fieberg2021_howto_habitat_selection_appB.html:text/html;Fieberg2021_howto_habitat_selection_appC.html:C\:\\Users\\bernardo.brandao\\Zotero\\storage\\J3WXW3NQ\\Fieberg2021_howto_habitat_selection_appC.html:text/html},
 }
 
 @article{torres_assessing_2016,
@@ -178,7 +197,7 @@
 	number = {6},
 	urldate = {2021-11-24},
 	journal = {Ecography},
-	author = {Ficetola, Gentile Francesco and Denoël, Mathieu},
+	author = {Ficetola, Gentile Francesco and Denöel, Mathieu},
 	month = dec,
 	year = {2009},
 	pages = {1075--1084},
@@ -441,7 +460,7 @@
 	month = oct,
 	year = {2018},
 	pages = {9906--9919},
-	file = {Skarin_2018_Ecol_Evol_WF_reindeer_Mala.docx:C\:\\Users\\bernardo.brandao\\Zotero\\storage\\AQ7NAPK4\\Skarin_2018_Ecol_Evol_WF_reindeer_Mala.docx:application/vnd.openxmlformats-officedocument.wordprocessingml.document;Skarin_etal_2018_Ecol_Evol_supmat.pdf:C\:\\Users\\bernardo.brandao\\Zotero\\storage\\Q2IXYHK2\\Skarin_etal_2018_Ecol_Evol_supmat.pdf:application/pdf;Skarin et al. - 2018 - Out of sight of wind turbines-Reindeer response to.pdf:C\:\\Users\\bernardo.brandao\\Zotero\\storage\\8B2H6SSW\\Skarin et al. - 2018 - Out of sight of wind turbines-Reindeer response to.pdf:application/pdf},
+	file = {Skarin et al. - 2018 - Out of sight of wind turbines-Reindeer response to.pdf:C\:\\Users\\bernardo.brandao\\Zotero\\storage\\8B2H6SSW\\Skarin et al. - 2018 - Out of sight of wind turbines-Reindeer response to.pdf:application/pdf;Skarin_2018_Ecol_Evol_WF_reindeer_Mala.docx:C\:\\Users\\bernardo.brandao\\Zotero\\storage\\AQ7NAPK4\\Skarin_2018_Ecol_Evol_WF_reindeer_Mala.docx:application/vnd.openxmlformats-officedocument.wordprocessingml.document;Skarin_etal_2018_Ecol_Evol_supmat.pdf:C\:\\Users\\bernardo.brandao\\Zotero\\storage\\Q2IXYHK2\\Skarin_etal_2018_Ecol_Evol_supmat.pdf:application/pdf},
 }
 
 @article{sloan_remaining_2014,
@@ -586,12 +605,13 @@
 
 @article{johnson_cumulative_2005,
 	title = {Cumulative {Effects} of {Human} {Developments} on {Arctic} {Wildlife}},
+	volume = {160},
 	abstract = {Recent discoveries of diamondiferous kimberlite deposits in the Canadian central Arctic led to unprecedented levels of mineral exploration and development. The cumulative effects of such activities are an issue of concern for government regulatory agencies, regional and international conservation organizations, wildlife managers, and indigenous peoples. We investigated the impacts of human activities and associated infrastructure on the distribution of Arctic wildlife in 190,000 km2 of the Taiga Shield and Southern Arctic ecozones 400 km northeast of Yellowknife, Northwest Territories, Canada.},
 	language = {en},
-	journal = {WILDLIFE MONOGRAPHS},
+	journal = {Wildlife Monographs},
 	author = {Johnson, Chris J and Boyce, Mark S and Case, Ray L. and Cluff, H. Dean and Gau, Robert J. and Gunn, Anne and Mulders, Robert},
 	year = {2005},
-	pages = {36},
+	pages = {1--36},
 	file = {Johnson and Boyce - Cumulative Effects of Human Developments on Arctic.pdf:C\:\\Users\\bernardo.brandao\\Zotero\\storage\\FKGTEDQS\\Johnson and Boyce - Cumulative Effects of Human Developments on Arctic.pdf:application/pdf},
 }
 
@@ -829,10 +849,14 @@
 	file = {Bakkestuen et al. - 2008 - Step-less models for regional environmental variat.pdf:C\:\\Users\\bernardo.brandao\\Zotero\\storage\\TSGUKLW2\\Bakkestuen et al. - 2008 - Step-less models for regional environmental variat.pdf:application/pdf},
 }
 
-@unpublished{lee_estimating_2020,
+@article{lee_estimating_2020,
 	title = {Estimating zones of influence using threshold regression},
+	volume = {2020:01},
+	issn = {1650-5581},
+	journal = {Working papers in transport, tourism, information technology and microdata analysis},
 	author = {Lee, Youngjo and Alam, Moudud and Sandström, Per and Skarin, Anna},
 	year = {2020},
+	pages = {1--16},
 }
 
 @article{miguet_how_2017,
@@ -1025,4 +1049,50 @@ Conclusions The study of the spatial scale at which landscape variables inﬂuen
 	year = {2005},
 	keywords = {Analysis of variance, Experimental design, Linear models (Statistics), Regression analysis, Textbooks},
 	file = {Kutner - 2005 - Applied linear statistical models.pdf:C\:\\Users\\bernardo.brandao\\Zotero\\storage\\HBP8UF3M\\Kutner - 2005 - Applied linear statistical models.pdf:application/pdf},
+}
+
+@techreport{gilleland_two-dimensional_2013,
+	title = {Two-dimensional kernel smoothing: {Using} the {R} package smoothie},
+	institution = {NCAR Technical Note, TN-502+STR, 17pp.},
+	author = {Gilleland, Eric},
+	year = {2013},
+	doi = {10.5065/D61834G2},
+}
+
+@unpublished{dorber_indicators_2022,
+	title = {Indicators of habitat functionality reveal significant underestimations in {SDG} trade-off risk - {The} case of wild reindeer and hydropower development. {Submitted}.},
+	author = {Dorber, Martin and Panzacchi, Manuela and Strand, Olav and Van Moorter, Bram},
+	year = {2022},
+}
+
+@article{worton_kernel_1989,
+	title = {Kernel {Methods} for {Estimating} the {Utilization} {Distribution} in {Home}-{Range} {Studies}},
+	volume = {70},
+	issn = {00129658},
+	url = {http://doi.wiley.com/10.2307/1938423},
+	doi = {10.2307/1938423},
+	abstract = {In this paper kernel methods for the nonparametric estimation of the utilization distribution from a random sample of locational observations made on an animal in its home range are described. They are of flexible form, thus can be used where simple parametric models are found to be inappropriate or difficult to specify. Two examples are given to illustrate the fixed and adaptive kernel approaches in data analysis and to compare the methods. Various choices for the smoothing parameter used in kernel methods are discussed. Since kernel methods give alternative approaches to the Anderson (1 982) Fourier transform method, some comparisons are made.},
+	language = {en},
+	number = {1},
+	urldate = {2022-05-11},
+	journal = {Ecology},
+	author = {Worton, B. J.},
+	month = feb,
+	year = {1989},
+	pages = {164--168},
+	file = {Worton - 1989 - Kernel Methods for Estimating the Utilization Dist.pdf:C\:\\Users\\bernardo.brandao\\Zotero\\storage\\ZYY34LUS\\Worton - 1989 - Kernel Methods for Estimating the Utilization Dist.pdf:application/pdf},
+}
+
+@book{james_introduction_2021,
+	address = {New York},
+	edition = {Second edition},
+	series = {Springer texts in statistics},
+	title = {An introduction to statistical learning: with applications in {R}},
+	isbn = {978-1-07-161418-1 978-1-07-161417-4},
+	shorttitle = {An introduction to statistical learning},
+	language = {eng},
+	publisher = {Springer},
+	author = {James, Gareth and Witten, Daniela and Hastie, Trevor and Tibshirani, Robert},
+	year = {2021},
+	file = {ISLRv2_website.pdf:C\:\\Users\\bernardo.brandao\\Zotero\\storage\\QZ5TLV8E\\ISLRv2_website.pdf:application/pdf},
 }
