--- a/notebooks/01_appendixA_additional_equations.Rmd
+++ b/notebooks/01_appendixA_additional_equations.Rmd
@@ -1,31 +1,207 @@
 ---
 title: "Appendix A"
-subtitle: "Deriving the cumulative influence for line and polygon representations of infrastructure"
-author: "Bernardo Niebuhr, Bram van Moorter, Manuela Panzacchi"
-date: "`r format(Sys.time(), '%d %B, %Y')`"
+subtitle: "Defining and deriving the zone of influence for multiple infrastructure features"
+author: ""
+date: ""
 geometry: margin=2cm
 abstract: | 
-  In this document, we derive the influence of the nearest feature and the cumulative influence of 
-  multiple features of an infrastructure for types of infrastructure and spatial variables that are represented
-  as lines (e.g. roads, power lines) or polygons (e.g. dams, mining sites). This complements the derivation
-  for point-type infrastructure as presented in the main text of 
-  Niebuhr et al. *Estimating the cumulative impacts and 
-  the zone of influence from multiple anthropogenic infrastructure on biodiversity.*
+  In this document, we provide additional details around the definition of the zone of influence (ZoI). First, we define the ZoI $\phi$ and present examples of ZoI functions with different shapes, parameterized with the ZoI radius. Second, we derive the ZoI of the nearest feature and the cumulative ZoI of multiple features of an infrastructure for types of infrastructure and spatial variables that are represented as lines (e.g. roads, power lines) or polygons (e.g. dams, mining sites). This complements the derivation for point-type infrastructure as presented in the main text of Niebuhr et al. *Estimating the cumulative impact and zone of influence of anthropogenic infrastructure on biodiversity.*
 bibliography: cuminf_bib.bib
 output:
   NinaR::jensAnalysis:
   highlight: tango
-fig_caption: yes
-toc: yes
+  fig_caption: yes
+  toc: yes
+header-includes:
+  \usepackage{float}
+  \usepackage{caption}
+  \DeclareCaptionLabelFormat{Sformat}{#1 A#2}
+  \captionsetup[figure]{labelformat=Sformat}
 ---
+
+```{r setup, include=FALSE}
+# This is optional
+# I choose the 'styler' package for tidying the code to preserve indentations
+# I set the cutoff for code tidying to 60, but this doesn't currently work with styler.
+# Set tidy = True to get the knitr default
+# I want all figures as png and pdf in high quality in a subfolder called figure
+library(NinaR)
+
+knitr::opts_chunk$set(
+  echo = TRUE,
+  tidy = "styler",
+  dev = c("png", "pdf"),
+  dpi = 600,
+  fig.path = "figure/",
+  fig.align="center",
+  fig.pos = 'H',
+  fig.width = 5,
+  fig.asp = 0.7,
+  message=FALSE,
+  warning=FALSE,
+  options(scipen=999)
+)
+
+options(
+  xtable.comment = F,
+  xtable.include.rownames = F,
+  nina.logo.y.pos = 0.15
+)
+palette(ninaPalette())
+```
 
 # Introduction
 
-In the main text, we derived the estimation of the cumulative influence of multiple infrastructure under different assumptions, but only did so for infrastructure that can be represented as points, such as houses, tourist cabins, or wind turbines. Here we complement it by deriving similar equations for linear infrastructure (e.g. roads, railways, trails, power lines) and infrastructure or landscape variables represented by polygons (e.g. mining sites, hydro dams, deforestation areas or polygons outlining specific land cover and land use types).
+In the main text, we defined the zone of influence (ZoI) and derived the estimation 
+of the ZoI of multiple features of an infrastructure type under different 
+assumptions, but only did so for infrastructure that can be represented as points, 
+such as houses, tourist cabins, or wind turbines. Here we complement it by exemplifying 
+ZoI functions with different shapes, parameterized on the ZoI radius $r$, and derive 
+similar equations for linear infrastructure (e.g. roads, railways, trails, power lines) 
+and infrastructure or landscape variables represented by polygons (e.g. mining sites, 
+hydro dams, deforestation areas or polygons outlining specific land cover and land use types).
 
-# Derivation of influence measures for multiple infrastructure features 
+# Definition of the Zone of Influence
 
-We start from the same baseline presented in the main text: we use as an example of statistical model a habitat-selection function (HSF; Fieberg et al., 2021). Copying here eq. 1 from the main text, the HSF is defined as:
+As defined in the main text, the ZoI is the function $\phi$ that informs how the 
+impact of a given infrastructure feature decreases with distance. Formally, the 
+ZoI $\phi = f(d, r)$ is any decay function that has a maximum value 
+1 where infrastructure is located, decreases towards zero as the Euclidean 
+distance $d$ increases, and possibly vanishes at a given point, the ZoI radius $r$. 
+Broadly speaking, the ZoI is characterized by its shape and radius. Here we use 
+four functions with different shapes to evaluate how the impact decays with distance, 
+even though in principle any function $\phi$ as defined above could be used. 
+Below we write these four functions and show how the radius $r$ is defined in each one.
+
+## Functions with a well-defined ZoI radius
+
+Some functions vanish for a certain non-infinite distance and therefore present 
+well-defined radii. Here the ZoI radius $r$ represents the distance beyond which $\phi = 0$.
+We used two functions within this class: the threshold and the linear decay (Bartlett)
+functions.
+
+### Threshold function
+
+The threshold function is defined as 
+
+$$
+\phi_{threshold}(d_{i_k}, r_k) = 
+    \begin{cases}
+      1 & \text{if $d_{i_k} < r_k$} \\
+      0 & \text{if $d_{i_k} \ge r_k$}
+    \end{cases}
+$$
+
+where $d_{i_k}$ is the distance to the infrastructure $i$ of type $k$ and $r_k$ 
+is the radius of the ZoI for infrastructure of type $k$. Then, $\phi_{threshold}$ 
+represents a constant impact of each infrastructure feature until $d = r$ and is 
+similar to what has generally been used when buffer zones are created around 
+infrastructure to calculate derived measures.
+
+Fig. A\ref{fig:plot_threshold} shows a plot of $\phi_{threshold}$ with $r = 10$ km.
+
+```{r plot_threshold, echo=FALSE, message=FALSE, error=FALSE, warning=FALSE, fig.cap="Illustration of a threshold ZoI function with radius = 10 km."}
+library(oneimpact)
+library(ggplot2)
+
+oneimpact::plot_zoi1d(points = 0, zoi_radius = 10, fun = threshold_decay, 
+                      range_plot = c(-20, 20)) +
+  labs(x = "Distance (km)")
+```
+
+### Linear decay function
+
+The linear decay function, also called tent decay function or "Bartlett" filter 
+(Harris, 1978), corresponds to 1 at the infrastructure location and decreases 
+linearly with the distance from it, until it reaches zero at a given distance,
+defined here as the ZoI radius $r$. Formally, the linear ZoI function 
+$\phi_{linear}$ is defined as:
+
+$$
+\phi_{linear}(d_{i_k}, r_k) = 
+    \begin{cases}
+      1 - \frac{d_{i_k}}{r_k} & \text{if $d_{i_k} < r_k$} \\
+      0 & \text{if $d_{i_k} \ge r_k$}
+    \end{cases}
+$$
+
+where $d_{i_k}$ is the distance to the infrastructure $i$ of type $k$ and $r_k$ 
+is the radius of the ZoI for infrastructure of type $k$.
+
+Fig. A\ref{fig:plot_linear} shows a plot of $\phi_{linear}$ with $r = 10$ km.
+
+```{r plot_linear, echo=FALSE, message=FALSE, error=FALSE, warning=FALSE, fig.cap="Illustration of a linear decaying ZoI function with radius = 10 km."}
+oneimpact::plot_zoi1d(points = 0, zoi_radius = 10, fun = linear_decay, 
+                      range_plot = c(-20, 20)) +
+  labs(x = "Distance (km)")
+```
+
+## Functions that do not vanish with distance
+
+Some functions decrease but do not vanish as the distance from infrastructure increases. 
+In these cases we define the ZoI radius $r$ as the distance at which the ZoI decreases
+to $\phi = \phi_{limit}$, an arbitrary small ZoI value beyond which the influence
+of the infrastructure is considered to be negligible. In these cases, the ZoI 
+definition needs an extra parameter and is defined as $\phi = f(d, r, \phi_{limit})$.
+We used two functions within this class: the exponential decay and the Gaussian decay
+functions. For both we set $\phi_{limit} = 0.05$ for all infrastructure.
+
+### Exponential decay function
+
+The exponential decay function is defined as 
+
+$$
+\phi_{exp}(d_{i_k}, r_k, \phi_{limit_k}) = \exp(-\lambda_{r_k} d_{i_k})
+$$
+
+where $d_{i_k}$ is the distance to the infrastructure $i$ of type $k$ and the 
+decay parameter $\lambda_{r_k}$ is defined in terms of $r_k$ and $\phi_{limit_k}$:
+
+$$
+\lambda_{r_k} = \frac{\ln(1/\phi_{limit_k})}{r_k}
+$$
+
+Here $\ln$ is the logarithm with base $e$. Fig. A\ref{fig:plot_exponential} shows 
+a plot of $\phi_{exp}$ with $r = 10$ km.
+
+```{r plot_exponential, echo=FALSE, message=FALSE, error=FALSE, warning=FALSE, fig.cap="Illustration of an exponential decaying ZoI function with radius = 10 km."}
+oneimpact::plot_zoi1d(points = 0, zoi_radius = 10, fun = exp_decay, 
+                      range_plot = c(-20, 20)) +
+  labs(x = "Distance (km)")
+```
+
+### Gaussian decay function
+
+The Gaussian (or half-normal) decay function is defined as 
+
+$$
+\phi_{Gauss}(d_{i_k}, r_k, \phi_{limit_k}) = \exp(-\lambda_{r_k} d_{i_k}^2)
+$$
+
+where $d_{i_k}$ is the distance to the infrastructure $i$ of type $k$ and the 
+decay parameter $\lambda_{r_k}$ is defined in terms of $r_k$ and $\phi_{limit_k}$:
+
+$$
+\lambda_{r_k} = \frac{\ln(1/\phi_{limit_k})}{r_k^2}
+$$
+
+In Fig. A\ref{fig:plot_gaussian} we visualize $\phi_{Gauss}$ with $r = 10$ km.
+
+```{r plot_gaussian, echo=FALSE, message=FALSE, error=FALSE, warning=FALSE, fig.cap="Illustration of a Gaussian decaying ZoI function with radius = 10 km."}
+oneimpact::plot_zoi1d(points = 0, zoi_radius = 10, fun = gaussian_decay, 
+                      range_plot = c(-20, 20)) +
+  labs(x = "Distance (km)")
+```
+
+Notice that, even though the ZoI radius $r$ is defined for all the
+functions, the change in their shape strongly modifies the interpretation of how
+the ZoI changes with distance (see also Fig. 1 in the main text).
+
+# Derivation of zones of influence for multiple features of a type of infrastructure
+
+We start from the same baseline presented in the main text: we use as an example 
+of statistical model a habitat-selection function (HSF; Fieberg et al., 2021). 
+Copying here eq. 2 from the main text, the HSF is defined as:
 
 \begin{equation} 
 \centering
@@ -33,22 +209,33 @@ We start from the same baseline presented in the main text: we use as an example
 w(\textbf{X}) = \exp \left( \beta_0 + \overbrace{\beta_1 X_1}^\text{A) Infrastructure type 1} + \overbrace{\beta_2 X_2}^\text{B) Infrastructure type 2} + \underbrace{\beta_{12} X_1 X_2}_\text{D) Interaction infrastructure types 1 and 2} + ... + \overbrace{\beta_k X_k}^\text{C) Infrastructure type k} \right)
 \end{equation}
 
-where $\textbf{X} = X_1,X_2, ...,  X_k$ correspond to $k$ different types of infrastructure (or other landscape modifications or spatiotemporal variables) and $\beta_k$ represents the magnitude of the impact (coefficient or effect size) of the infrastructure of type $k$.
+where $\textbf{X} = X_1,X_2, ...,  X_k$ correspond to $k$ different types of 
+infrastructure (or other spatiotemporal variables) and $\beta_k$ represents the 
+effect size of the infrastructure of type $k$.
 
-## Influence function
+## ZoI metrics
 
-We assume that in the landscape there are $n_k$ features of the same type of infrastructure $k$, and let the influence of the feature $i$ of an infrastructure \textit{k} be an influence function $\phi_{i_k} = f(d_{i_k}, ZoI_k)$, where $d_{i_k}$ is the distance to a feature ($i_k$) of infrastructure type $k$ and $ZoI_k$ is its zone of influence. As we show in the main text, for point-like infrastructure we can sum the effect of each feature on animal space use, so that the linear terms in equation \ref{eqn:HSF} become:
+As shown in the main text, when multiple features of a type of infrastructure are
+present in the landscape, we can calculate two ZoI metrics: the ZoI of the nearest 
+feature only ($\phi_{nearest}$) and the cumulative ZoI of multiple features
+($\phi_{cumulative}$).
+
+We assume that in the landscape there are $n_k$ features of the same type of 
+infrastructure $k$, and let the influence of the feature $i$ of an infrastructure 
+\textit{k} be a ZoI function $\phi$ as defined above. As we show in the main text, 
+for point-like infrastructure we can sum the effect of each feature, so that the 
+impact terms in equation \ref{eqn:HSF} become:
 
 \begin{equation}
 \label{eqn:HSFtermPoint}
-    \beta_k X_k = \sum_{i=1}^{n_k} \beta_{i_k} \phi_{i_k}.
+    I_k = \beta_k X_k = \sum_{i=1}^{n_k} \beta_{i_k} \phi_{i_k}.
 \end{equation}
 
 Likewise, for linear infrastructure we can integrate the term
 
 \begin{equation}
 \label{eqn:HSFtermLine}
-    \beta_k X_k = \int_{L} \beta_{k}(l) \ \phi_{k}(l; d_{i_k}, ZoI_k) dl
+    I_k = \beta_k X_k = \int_{L} \beta_{k}(l) \ \phi_{k}(l; d_{i_k}, r_k) dl
 \end{equation}
 
 where $dl$ denotes the length on an infinitesimal infrastructure segment and $L$ is the
@@ -57,53 +244,89 @@ For polygon variables we can similarly integrate the term, but on two dimensions
 
 \begin{equation}
 \label{eqn:HSFtermPolygon}
-    \beta_k X_k = \iint_{\Omega} \beta_{k}(x,y) \ \phi_{k}(x, y; d_{i_k}, ZoI_k) \ dx \ dy
+    I_k = \beta_k X_k = \iint_{\Omega} \beta_{k}(x,y) \ \phi_{k}(x, y; d_{i_k}, r_k) \ dx \ dy
 \end{equation}
 
 where $\Omega$ is the whole study area.
 
-## Influence of the nearest feature
+## Zone of influence of the nearest feature
 
-To estimate the influence of the nearest feature, we showed that, for point-like infrastructure,
-one generally considers $\beta_i = 0$ for all $i > 1$ (where the features are ordered by increasing distance), i.e., only the nearest feature is assumed to influence a given site. We can make equivalent assumptions for linear and area infrastructure by considering only the nearest (orthogonal) segment of linear infrastructure or the closest edge of the closest polygon
-to influence processes in a given location. In such a way, their influence is similar to that of a point. As a consequence, equation 3 from the main text keeps valid to represent the influence of the nearest feature for linear and area variables:
+To estimate the ZoI of the nearest feature alone, we showed that, for point-like 
+infrastructure, one generally considers $\beta_i = 0$ for all $i > 1$ (where the 
+features are ordered by increasing distance), i.e., only the nearest feature is 
+assumed to influence a given site. We can make equivalent assumptions for linear 
+and area infrastructure by considering only the nearest (orthogonal) segment of 
+linear infrastructure or the closest edge of the closest polygon to influence 
+processes in a given location. In such a way, their influence is similar to that 
+of a point. As a consequence, eq. 4 from the main text keeps valid to represent 
+the influence of the nearest feature for linear and area variables:
 
 \begin{equation}
 \label{eqn:HSFnearest}
 \begin{split}
-    \beta_k X_k & = \beta_{1_k} \phi_{1_k} \\
-                & = \beta_{k} \phi_{nearest_k}.
+    I_k & = \beta_{1_k} \phi_{1_k} \\
+        & = \beta_{k} \phi_{nearest_k}.
 \end{split}                
 \end{equation}
 
-## Cumulative influence of multiple features
+## Cumulative zone of influence
 
-To derive the cumulative influence of multiple features of an infrastructure type, for point-like infrastructure we assumed that all features exert the same influence, so that $\beta_1 =\beta_2 = ... = \beta_k = \beta$ for all features. If we do similar assumptions for lines and polygons -- that all infinitesimal segments $dl$ present the same influence over $L$ and that all pieces of area of the polygons present similar influence around them, eq. 4 from the main text remains valid for these types of variables:
+To derive the cumulative ZoI of multiple features of an infrastructure type, 
+for point-like infrastructure we assumed that all features exerted the same influence, 
+so that $\beta_1 =\beta_2 = ... = \beta_k = \beta$. If we do similar assumptions 
+for lines and polygons -- that all infinitesimal segments $dl$ present the same 
+influence over $L$ and that all pieces of area of the polygons present similar 
+influence around them, eq. 5 from the main text remains valid for these types of variables:
 
 \begin{equation}
-\label{eqn:HSFcuminf}
+\label{eqn:HSFcumzoi}
 \begin{split}
-    \beta_k X_k & = \beta_k \int_{L} \phi_{k}(l) \ dl \\
-                & = \beta_k \phi_{cum_k} \\
-                & \text{and} \\
-    \beta_k X_k & = \beta_k \iint_{\Omega} \phi_{k}(x, y) \ dx \ dy \\
-                & = \beta_k \phi_{cum_k}.
+    I_k & = \beta_k \int_{L} \phi_{k}(l) \ dl \\
+        & = \beta_k \phi_{cumulative_k} \\
+        & \text{and} \\
+    I_k & = \beta_k \iint_{\Omega} \phi_{k}(x, y) \ dx \ dy \\
+        & = \beta_k \phi_{cumulative_k}.
 \end{split}
 \end{equation}
 
-The only difference here regards how the cumulative influence function $\phi_{cum}$ is defined -- as a summation for point infrastructure (eq. 4 in the main text) or an integral over 1 or 2 dimensions for linear and area infrastructure (eq. 6). 
+The only difference here regards how the cumulative ZoI function $\phi_{cumulative}$ 
+is defined -- as a summation for point infrastructure (eq. 5 in the main text) or 
+as an integral over 1 or 2 dimensions for linear and area infrastructure (eq. 
+\ref{eqn:HSFcumzoi}). 
 
-# Computation of the cumulative influence
+# Computation of the cumulative zone of influence
 
-In theory, the calculation of the cumulative influence function $\phi_{cum}$ for a given study area $\Omega$ requires the computation of eq. 4 from the main text or eq. 6 for each infrastructure feature, which might be difficult and computationally challenging for large areas with many infrastructure features spread non-regularly in space. To overcome that limitation, we implemented this calculation by constructing filters (or weighing matrices; see Miguet et al., 2017) that follow an assumed decaying function (see the functions in Fig. 1 of the main text for examples) and used them on moving window/neighborhood analyses over the input infrastructure layers (see Appendix D for an illustration of how this approach is applied using the R package `oneimpact`). This is similar to the approaches presented by Miguet et al. (2017) and Gilleland (2013). Even though we do not demonstrate it here, if the filter is set appropriately to include most of the area within which the influence function is positive (e.g. larger than 0.05 or 0.01), the result of applying eq. 4 of the main text or eq. 6 presents a correlation $> 0.99$ with the result of the neighborhood analysis.
-
-<!-- **Should I demonstrate it here for examples such as the ones in Appendix B?** -->
+In theory, the calculation of the cumulative zone of influence function 
+$\phi_{cumulative}$ for a given study area $\Omega$ requires the computation of 
+eq. 4 from the main text or eq. \ref{eqn:HSFcumzoi} for each infrastructure feature, 
+which might be difficult and computationally challenging for large areas with many 
+infrastructure features spread non-regularly in space. To overcome that limitation, 
+we implemented this calculation by constructing filters (or weighing matrices; 
+see Miguet et al., 2017) that follow an assumed decaying function (such as the 
+ZoI functions described above) and used them on neighborhood analyses over the 
+input infrastructure layers (see Appendix D for an illustration of how this 
+approach is applied using the R package `oneimpact`). This is analogous to the 
+approaches presented by Miguet et al. (2017) and Gilleland (2013). Even though 
+we do not demonstrate it here, for non-vanishing function (e.g. exponential or 
+Gaussian decay) when the size of the filter is set properly 
+to include most the area within which $\phi > 0$ (i.e. $\phi_{limit}$ is 
+small enough), the result of applying eq. 4 of the main text or eq. 6 presents 
+a correlation $> 0.99$ with the result of the neighborhood analysis.
 
 # References
 
-Fieberg, J., Signer, J., Smith, B., & Avgar, T. (2021). A 'How to' guide for interpreting parameters in habitat‐selection analyses. Journal of Animal Ecology, 90(5), 1027--1043. https://doi.org/10.1111/1365-2656.13441
+Fieberg, J., Signer, J., Smith, B., & Avgar, T. (2021). A 'How to' guide for 
+interpreting parameters in habitat‐selection analyses. Journal of Animal Ecology, 
+90(5), 1027--1043. https://doi.org/10.1111/1365-2656.13441
 
-Gilleland, E. (2013). Two-dimensional kernel smoothing: Using the R package smoothie. NCAR Technical Note, TN-502+STR, 17pp. https://doi.org/10.5065/D61834G2
+Gilleland, E. (2013). Two-dimensional kernel smoothing: Using the R package smoothie. 
+NCAR Technical Note, TN-502+STR, 17pp. https://doi.org/10.5065/D61834G2
 
-Miguet, P., Fahrig, L., & Lavigne, C. (2017). How to quantify a distance‐dependent landscape effect on a biological response. Methods in Ecology and Evolution, 8(12), 1717--1724. https://doi.org/10.1111/2041-210X.12830
+Harris, F. J. (1978). On the use of windows for harmonic analysis with the discrete 
+Fourier transform. Proceedings of the IEEE, 66(1), 51–83. 
+https://doi.org/10.1109/PROC.1978.10837
+
+Miguet, P., Fahrig, L., & Lavigne, C. (2017). How to quantify a distance‐dependent 
+landscape effect on a biological response. Methods in Ecology and Evolution, 8(12), 
+1717--1724. https://doi.org/10.1111/2041-210X.12830
 
