changed bib file name to zoi

--- a/text/cumzoi_bib.bib
+++ b/text/cumzoi_bib.bib
@@ -274,9 +274,7 @@
 	address = {Cham},
 	title = {The {Integration} {Imperative}: cumulative environmental, community and health effects of multiple natural resource developments},
 	isbn = {978-3-319-22122-9 978-3-319-22123-6},
-	url = {http://link.springer.com/10.1007/978-3-319-22123-6},
 	language = {en},
-	urldate = {2022-01-06},
 	publisher = {Springer International Publishing},
 	editor = {Gillingham, Michael P. and Halseth, Greg R. and Johnson, Chris J. and Parkes, Margot W.},
 	year = {2016},
@@ -1095,4 +1093,21 @@ Conclusions The study of the spatial scale at which landscape variables inﬂuen
 	author = {James, Gareth and Witten, Daniela and Hastie, Trevor and Tibshirani, Robert},
 	year = {2021},
 	file = {ISLRv2_website.pdf:C\:\\Users\\bernardo.brandao\\Zotero\\storage\\QZ5TLV8E\\ISLRv2_website.pdf:application/pdf},
+}
+
+@article{hu_overview_2021,
+	title = {Overview of recent land‐cover changes in biodiversity hotspots},
+	volume = {19},
+	issn = {1540-9295, 1540-9309},
+	url = {https://onlinelibrary.wiley.com/doi/10.1002/fee.2276},
+	doi = {10.1002/fee.2276},
+	language = {en},
+	number = {2},
+	urldate = {2022-06-14},
+	journal = {Frontiers in Ecology and the Environment},
+	author = {Hu, Xiangping and Huang, Bo and Verones, Francesca and Cavalett, Otavio and Cherubini, Francesco},
+	month = mar,
+	year = {2021},
+	pages = {91--97},
+	file = {Hu et al. - 2021 - Overview of recent land‐cover changes in biodivers.pdf:C\:\\Users\\bernardo.brandao\\Zotero\\storage\\EY4H3DSX\\Hu et al. - 2021 - Overview of recent land‐cover changes in biodivers.pdf:application/pdf},
 }
